# url-shortener

./: .env.sample  LICENSE  README.md  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml
backend/: Dockerfile  __main__.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 381a6f7a07b3_rename_fields.py  3a6be149feda_add_separate_admindetails_model.py  8319b902b2b6_create_shorturl_model.py  83ba3d896a21_create_url_model.py
backend/app/: __main__.py  main.py  models.py  settings.py
backend/app/core/: dependencies.py  postgres.py
backend/app/models/: __init__.py  admin_details.py  short_url.py  url.py
backend/app/shortener/: __init__.py  models.py  services.py  utils.py  views.py
backend/app/shortener/models/: responses.py  short_url.py
backend/app/shortener/tests/: test_views.py
backend/scripts/: launch.sh
