[project]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = [
    {name = "biegasj",email = "biegasj@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
ruff = "^0.9.6"
pytest = "^8.3.4"

[tool.ruff]
line-length = 120
