[project]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = [
    {name = "biegasj",email = "biegasj@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
ruff = "^0.9.6"
pytest = "^8.3.4"
pytest-env = "^1.1.5"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pytest_env]
POSTGRES_PASSWORD="password"
POSTGRES_USER="user"
POSTGRES_DB="db"
POSTGRES_PORT=5432
POSTGRES_URI="uri"

ALLOWED_ORIGINS="http://127.0.0.1:5173"
BASE_URL="http://localhost:8000"